Tutorial Recipes & Loot Tables

--- a/src/main/resources/assets/minecraftia/lang/en_us.json
+++ b/src/main/resources/assets/minecraftia/lang/en_us.json
@@ -4,6 +4,8 @@
 
   "block.minecraftia.bismuth_block": "Block of Bismuth",
   "block.minecraftia.bismuth_ore": "Bismuth Ore",
+  "block.minecraftia.bismuth_deepslate_ore": "Bismuth Deepslate Ore",
+
 
   "creativetab.minecraftia.bismuth_items": "Bismuth Items",
   "creativetab.minecraftia.bismuth_blocks": "Bismuth Blocks"
