Tutorial Custom Advanced Items

--- a/src/main/resources/assets/minecraftia/lang/en_us.json
+++ b/src/main/resources/assets/minecraftia/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.minecraftia.bismuth": "Bismuth",
   "item.minecraftia.raw_bismuth": "Raw Bismuth",
+  "item.minecraftia.chisel": "Chisel",
 
   "block.minecraftia.bismuth_block": "Block of Bismuth",
   "block.minecraftia.bismuth_ore": "Bismuth Ore",
