Tutorial Food and Fuel

--- a/src/main/resources/assets/minecraftia/lang/en_us.json
+++ b/src/main/resources/assets/minecraftia/lang/en_us.json
@@ -4,6 +4,8 @@
   "item.minecraftia.chisel": "Chisel",
 
   "item.minecraftia.radish": "Radish",
+  "item.minecraftia.frostfire_ice": "Frostfire Ice",
+  "item.minecraftia.starlight_ashes": "Starlight Ashes",
 
   "block.minecraftia.bismuth_block": "Block of Bismuth",
   "block.minecraftia.bismuth_ore": "Bismuth Ore",
